<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_home"
        android:enabled="true"
        android:icon="@drawable/nav_home_icon"
        android:title="@string/home"/>

    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/nav_news_icon"
        android:title="@string/awareness"/>

    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/nav_event_ic"
        android:title="@string/event"/>

    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/nav_shop_ic"
        android:title="@string/shop"/>

    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/nav_user_ic"
        android:title="@string/profile"/>
</menu>
